<resources>
    <string name="app_name">Fitness</string>
    <string name="monday_long">Monday</string>
    <string name="monday_short">Mon</string>
    <string name="tuesday_long">Tuesday</string>
    <string name="tuesday_short">Tue</string>
    <string name="wednesday_long">Wednesday</string>
    <string name="wednesday_short">Wed</string>
    <string name="thursday_long">Thursday</string>
    <string name="thursday_short">Thu</string>
    <string name="friday_long">Friday</string>
    <string name="friday_short">Fri</string>
    <string name="saturday_long">Saturday</string>
    <string name="saturday_short">Sat</string>
    <string name="sunday_long">Sunday</string>
    <string name="sunday_short">Sun</string>
    <string name="welcome_to_fitness_app">Welcome to Fitness app</string>
    <string name="get_started">Get started!</string>
    <string name="filling_profile">Filling profile</string>
    <string name="skip">Skip</string>
    <string name="fitness_workout">Fitness Workout</string>
    <string name="repeat">Repeat</string>
    <string name="monday">Monday</string>
    <string name="tuesday">Tuesday</string>
    <string name="wednesday">Wednesday</string>
    <string name="thursday">Thursday</string>
    <string name="friday">Friday</string>
    <string name="saturday">Saturday</string>
    <string name="sunday">Sunday</string>
    <string name="cancel">Cancel</string>
    <string name="ok">OK</string>
    <string name="you_get_28_points_cool">You get 28 points! Cool!</string>
    <string name="proceed_to_master">You tried good and you can move to the level: master</string>
    <string name="select_master_level">Select master level</string>
    <string name="proceed_advanced_level">Proceed advanced level</string>
    <string name="horizontal_bar">Horizontal bar</string>
    <string name="start_a_workout">Start a workout</string>
    <string name="recommendation">Recommendation</string>
    <string name="choose_exercises_to_horizontal_bar">In order to choose the most effective exercises for you on the horizontal bar, you need to know your level of physical fitness.</string>
    <string name="how_many_technical_pull_ups_did_you_do">How many technical pull-ups did you do?</string>
    <string name="test">Test</string>
    <string name="horizontal_bar_test_step1"><b>Step 1.</b> Take the horizontal bar with a straight closed grip. Grip at shoulder width. Keep your head straight and look forward.</string>
    <string name="horizontal_bar_test_step2"><b>Step 2.</b> Pull your body up, trying to reach your chest to the bar. Slowly lower your body by gradually straightening your arms.</string>
    <string name="horizontal_bar_test_description">The pull-up is done slowly at each stage of the movement, both uphill and downhill. You should feel the maximum tension in the muscles of your arms and back, you should not make unnecessary movements, trying to simplify your task.\n\nIn terms of muscle efficiency, it is better to do one technical pull-up than five non-technical ones.</string>
    <string name="morning_gymnastics">Morning gymnastics</string>
    <string name="start_day_water">Start your day with a glass of warm water. This is necessary for a better awakening of the body and good work.</string>
    <string name="power_training">Power training</string>
    <string name="name">Name:</string>
    <string name="empty">--</string>
    <string name="old">Old:</string>
    <string name="tall">Tall:</string>
    <string name="current_weight">Current weight:</string>
    <string name="goal_weight">Goal weight:</string>
    <string name="level">Level:</string>
    <string name="diary">Diary</string>
    <string name="mon">Mon</string>
    <string name="tue">Tue</string>
    <string name="wed">Wed</string>
    <string name="thu">Thu</string>
    <string name="fri">Fri</string>
    <string name="sat">Sat</string>
    <string name="sun">Sun</string>
    <string name="workout">Workout</string>
    <string name="duration">duration</string>
    <string name="calories">calories</string>
    <string name="points">points</string>
    <string name="activity">Activity</string>
    <string name="active_energy">Active Energy</string>
    <string name="resting_energy">Resting Energy</string>
    <string name="burned_total">Burned total</string>
    <string name="all_history">All history</string>
    <string name="your_level">Your level:</string>
    <string name="beginner">Beginner</string>
    <string name="select_a_workout">Select a workout</string>
    <string name="exercise_was_performed">Exercises was performed</string>
    <string name="for_the_last_workout">For the last workout</string>
    <string name="for_7_days">For 7 days</string>
    <string name="for_30_days">For 30 days</string>
    <string name="for_365_days">For 365 days</string>
    <string name="total_workouts">Total workouts</string>
    <string name="what_s_your_current_activity_level">What`s your current activity level?</string>
    <string name="advanced">Advanced</string>
    <string name="master">Master</string>
    <string name="how_old_are_you">How old are you?</string>
    <string name="you_must_be_at_least_13_years_old">You must be at least 13 years old</string>
    <string name="done">Done!</string>
    <string name="thank_you_for_taking_the_time_to_create_a_profile">Thank you for taking the time to create a profile!</string>
    <string name="what_s_your_current_weight">What`s your current weight?</string>
    <string name="kg">kg</string>
    <string name="lb">lb</string>
    <string name="proceed">Proceed</string>
    <string name="tell_us_about_yourself">Tell us about yourself!</string>
    <string name="i_m_female">I`m female</string>
    <string name="i_m_male">I`m male</string>
    <string name="what_s_your_goal_weight">What`s your goal weight?</string>
    <string name="what_s_your_name">What`s your name?</string>
    <string name="profile_picture">Profile picture</string>
    <string name="select_picture">Select picture</string>
    <string name="how_tall_are_you">How tall are you?</string>
    <string name="cm">cm</string>
    <string name="ft">ft</string>
    <string name="in">in</string>
    <string name="add_remind">add a reminder</string>
    <string name="you_can_rest_today">You can rest today</string>
    <string name="your_body_and_muscles_need_to_rest">Your body and muscles need to rest</string>
    <string name="legs">Legs</string>
    <string name="start_a_workout_without_warm_up">Start a workout without warm up</string>
    <string name="repeat_a_workout">Repeat a workout</string>
    <string name="keep_it_up">Keep it up!</string>
    <string name="today">Today</string>
    <string name="exercise">exercise</string>
    <string name="reminder">Reminder</string>
    <string name="i_feel">"I feel "</string>
    <string name="easy">Easy</string>
    <string name="fatigue">Fatigue</string>
    <string name="workouts">Workouts</string>
    <string name="workouts_for_specific_muscle_groups">Workouts for specific muscle groups</string>
    <string name="arms_and_chest">Arms and chest</string>
    <string name="stretching">Stretching</string>
    <string name="plank">Plank</string>
    <string name="press">Press</string>
    <string name="shoulders_and_back">Shoulders and back</string>
    <string name="profile">Profile</string>
    <string name="progress">Progress</string>
    <string name="notification_content_title">"It's time for a workout!"</string>
    <string name="notification_content_text">"Click here to start your workout"</string>
    <string name="error">Error</string>
    <string name="you_must_be_at_most_120_years_old">You must be at most 120 years old</string>
    <string name="please_enter_a_valid_height">Please enter a valid height</string>
    <string name="the_app_will_not_work_correctly_without_permissions">The app will not work correctly without permissions</string>
    <plurals name="years_old">
        <item quantity="one">%d years</item>
        <item quantity="few">%d years</item>
        <item quantity="many">%d years</item>
        <item quantity="other">%d years</item>
    </plurals>
    <string name="num_cm">%s cm</string>
    <string name="num_kg">%s kg</string>
    <string name="weak">Weak</string>
    <string name="select_advanced_level">Select advanced level</string>
    <string name="proceed_weak_level">Proceed weak level</string>
    <string name="error_animation">Animation loading error!</string>
    <string name="x">x%d</string>
    <plurals name="repeat_num_times">
        <item quantity="one">Repeat %d time</item>
        <item quantity="few">Repeat %d times</item>
        <item quantity="many">Repeat %d times</item>
        <item quantity="other">Repeat %d times</item>
    </plurals>
    <string name="aproaches_num">%s   Approaches %d</string>
    <string name="level_num">level: %s</string>
    <plurals name="num_exercises">
        <item quantity="one">%d exercise</item>
        <item quantity="few">%d exercises</item>
        <item quantity="many">%d exercises</item>
        <item quantity="other">%d exercises</item>
    </plurals>
    <plurals name="num_points">
        <item quantity="zero">~ %d point</item>
        <item quantity="one">~ %d point</item>
        <item quantity="two">~ %d points</item>
        <item quantity="few">~ %d points</item>
        <item quantity="many">~ %d points</item>
        <item quantity="other">~ %d points</item>
    </plurals>
    <string name="level_beginner_test">"Congratulations!\nYour level: beginner"</string>
    <string name="level_advanced_test">"Congratulations!\nYour level: advanced"</string>
    <string name="level_master_test">"Congratulations!\nYour level: master"</string>
    <string name="day_num">Day %d. %s</string>
    <string name="you_get_num_points">You get %s points! Well done!</string>
    <string name="workout_over_kg">Weight: %s KG</string>
    <string name="workout_over_bmi">BMI: %s</string>
    <string name="bad">Bad</string>
    <string name="good">Good</string>
    <string name="great">Great</string>
    <string name="warm_up">Warm Up</string>
    <string name="hours_num">%s h</string>
    <string name="min_num">%s min</string>
    <string name="sec_num">%s sec</string>
    <string name="exit">Exit</string>
    <string name="close_dialog_description">When you close the app, your progress will be lost.\nAre you sure you want to interrupt your workout?</string>
    <string name="the_name_is_too_big">The name can not be more than 12 characters</string>
    <string name="day_num_rest_day">Day %d. Rest day</string>
    <string name="from_gellery">From gallery</string>
    <string name="lion">lion</string>
    <string name="total_score">Total score</string>
    <string name="great_job_don_t_give_up">Great job! Don\'t give up</string>
    <string name="until_the_next_level">Until the next level</string>
    <string name="you_can_go_the_next_level">upgrade</string>
</resources>