<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:background="@color/white">


    <ImageView
        android:id="@+id/imageView"
        android:layout_marginTop="@dimen/_16sdp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/upgrade_activity_level_img_src_gift" />

    <TextView
        android:layout_marginTop="@dimen/_12sdp"
        android:id="@+id/points"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/you_get_28_points_cool"
        android:textColor="@color/black"
        android:fontFamily="@font/raleway_regular"
        android:textSize="@dimen/_12ssp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageView" />

    <TextView
        android:id="@+id/textView3"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/proceed_to_master"
        android:gravity="center"
        android:textColor="@color/text_blue"
        android:fontFamily="@font/raleway_semibold"
        android:layout_marginTop="@dimen/_24sdp"
        android:textSize="@dimen/_12ssp"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginStart="@dimen/_16sdp"
        android:layout_marginEnd="@dimen/_16sdp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/points" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/select_up_level"
        android:layout_width="wrap_content"
        android:layout_height="0dp"
        android:layout_marginStart="@dimen/_16sdp"
        android:layout_marginEnd="@dimen/_16sdp"
        android:background="@drawable/button_background_gradient_blue_rounded"
        android:fontFamily="@font/righteous_regular"
        android:paddingStart="@dimen/_48sdp"
        android:paddingEnd="@dimen/_48sdp"
        android:text="@string/select_master_level"
        android:layout_marginTop="@dimen/_16sdp"
        android:textAllCaps="false"
        android:textColor="@color/white"
        android:textSize="@dimen/_16ssp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView3" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/select_curr_level"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/_16sdp"
        android:layout_marginEnd="@dimen/_16sdp"
        android:background="@drawable/button_background_gradient_gray_rounded"
        android:fontFamily="@font/righteous_regular"
        android:paddingStart="@dimen/_48sdp"
        android:paddingEnd="@dimen/_48sdp"
        android:text="@string/proceed_advanced_level"
        android:layout_marginTop="@dimen/_16sdp"
        android:textAllCaps="false"
        android:textColor="@color/white"
        android:textSize="@dimen/_16ssp"
        android:layout_marginBottom="@dimen/_24sdp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/select_up_level"/>

    <ImageView
        android:layout_marginStart="@dimen/_12sdp"
        android:id="@+id/imageView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toBottomOf="@+id/points"
        app:layout_constraintStart_toEndOf="@+id/points"
        app:layout_constraintTop_toBottomOf="@+id/imageView"
        app:srcCompat="@drawable/workout_over_img_src_star" />
</androidx.constraintlayout.widget.ConstraintLayout>