<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:background="@color/white">


    <ImageView
        android:id="@+id/imageView"
        android:layout_marginTop="@dimen/_16sdp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/dialog_confirm_exit_workout_img_src_door"/>


    <TextView
        android:id="@+id/textView3"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/close_dialog_description"
        android:textColor="@color/text_blue"
        android:fontFamily="@font/raleway_semibold"
        android:layout_marginTop="@dimen/_24sdp"
        android:textSize="@dimen/_11ssp"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginStart="@dimen/_16sdp"
        android:layout_marginEnd="@dimen/_16sdp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageView" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/proceed_btn"
        android:layout_width="wrap_content"
        android:layout_height="0dp"
        android:layout_marginStart="@dimen/_16sdp"
        android:layout_marginEnd="@dimen/_16sdp"
        android:background="@drawable/button_background_gradient_blue_rounded"
        android:fontFamily="@font/righteous_regular"
        android:paddingStart="@dimen/_64sdp"
        android:paddingEnd="@dimen/_64sdp"
        android:text="@string/proceed"
        android:layout_marginTop="@dimen/_16sdp"
        android:textAllCaps="false"
        android:textColor="@color/white"
        android:textSize="@dimen/_16ssp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView3" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/exit_dialog_btn"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/_16sdp"
        android:layout_marginBottom="@dimen/_24sdp"
        android:background="@drawable/button_background_gradient_gray_rounded"
        android:fontFamily="@font/righteous_regular"
        android:paddingStart="@dimen/_48sdp"
        android:paddingEnd="@dimen/_48sdp"
        android:text="@string/exit"
        android:textAllCaps="false"
        android:textColor="@color/white"
        android:textSize="@dimen/_16ssp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="@+id/proceed_btn"
        app:layout_constraintStart_toStartOf="@+id/proceed_btn"
        app:layout_constraintTop_toBottomOf="@+id/proceed_btn" />


</androidx.constraintlayout.widget.ConstraintLayout>