<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:background="@color/white"
    >

    <include
        android:id="@+id/toolbar_layout"
        layout="@layout/toolbar_horizontal_bar_layout"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"/>




    <LinearLayout
        android:id="@+id/recommendation"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/recommendation_background_light_blue"
        android:orientation="vertical"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/toolbar_layout">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/_24sdp"
            android:layout_marginTop="@dimen/_8sdp"
            android:fontFamily="@font/raleway_regular"
            android:text="@string/recommendation"
            android:textColor="@color/black"
            android:textSize="@dimen/_14ssp" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/_24sdp"
            android:layout_marginTop="@dimen/_12sdp"
            android:layout_marginEnd="@dimen/_16sdp"
            android:layout_marginBottom="@dimen/_12sdp"
            android:fontFamily="@font/raleway_regular"
            android:text="@string/choose_exercises_to_horizontal_bar"
            android:textColor="@color/black"
            android:textSize="@dimen/_10ssp"

            />


    </LinearLayout>

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/start_btn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@drawable/button_background_gradient_blue_rounded"
        android:fontFamily="@font/righteous_regular"
        android:paddingStart="@dimen/_24sdp"
        android:paddingEnd="@dimen/_24sdp"
        android:text="@string/start_a_workout"
        android:textAllCaps="false"
        android:layout_marginTop="@dimen/_24sdp"
        android:textColor="@color/white"
        android:textSize="@dimen/_20ssp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/icon" />

    <ImageView
        android:id="@+id/icon"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/_24sdp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/recommendation"
        app:srcCompat="@drawable/fragment_horizontal_bar_img_src" />


</androidx.constraintlayout.widget.ConstraintLayout>