<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_height="match_parent"
    android:background="@color/main_background_gray">

    <include
        android:id="@+id/toolbar_layout"
        layout="@layout/toolbar_rest_layout"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageView
        android:layout_marginTop="@dimen/_32sdp"
        android:id="@+id/leon_iw"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/toolbar_layout"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:background="@drawable/rest_img_src_hammock"/>

    <ImageView
        android:layout_width="match_parent"
        android:layout_height="0dp"
        app:layout_constraintTop_toTopOf="@+id/guideline"
        android:background="@drawable/forest_background"
        android:backgroundTint="@color/forest_background_tint"/>

    <TextView
        android:id="@+id/rest_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/you_can_rest_today"
        android:layout_marginTop="@dimen/_32sdp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:fontFamily="@font/righteous_regular"
        app:layout_constraintTop_toBottomOf="@+id/leon_iw"
        android:textColor="@color/black"
        android:textSize="@dimen/_20ssp"/>

    <TextView
        android:id="@+id/rest_descr"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/your_body_and_muscles_need_to_rest"
        android:layout_marginTop="@dimen/_12sdp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:fontFamily="@font/raleway_semibold"
        app:layout_constraintTop_toBottomOf="@+id/rest_title"
        android:textColor="@color/black"
        android:textSize="@dimen/_12ssp"/>

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.5"/>

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/start_btn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/_16sdp"
        android:background="@drawable/button_background_gradient_blue_rounded"
        android:fontFamily="@font/righteous_regular"
        android:paddingStart="@dimen/_48sdp"
        android:paddingTop="@dimen/_12sdp"
        android:paddingEnd="@dimen/_48sdp"
        android:paddingBottom="@dimen/_12sdp"
        android:text="@string/done"

        android:textAllCaps="false"
        android:textColor="@color/white"
        android:textSize="@dimen/_18ssp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/rest_descr"
        app:layout_constraintVertical_bias="0.0" />

</androidx.constraintlayout.widget.ConstraintLayout>